--- a/MkTurizm/UI/Views/Home/Index.cshtml
+++ b/MkTurizm/UI/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 
 <div class="fh5co-hero">
-    <div class="fh5co-cover" data-stellar-background-ratio="0.5" style="background-image: url(https://imgyukle.com/f/2022/05/12/ReJq3U.png);">
+    <div class="fh5co-cover" data-stellar-background-ratio="0.5" style="background-image: url(https://imgyukle.com/f/2022/05/13/RehF6P.png);">
         <div class="desc">
             <div class="container">
                 <div class="row">
