--- a/MkTurizm/UI/Views/Home/SeferBilgileri.cshtml
+++ b/MkTurizm/UI/Views/Home/SeferBilgileri.cshtml
@@ -50,10 +50,10 @@
                         <div class="col-md-12 pd05">
                             <div class=" row sefer-list-kutu">
                                 <div class="col-md-2 col-xs-3 sefer-list-kutu-tarih koltuk-secmobile" data-firma="" data-id="3590892" data-tarih="2022-05-11 23:00:00" data-fiyat="279">
-                                    <div class="sefersaat" title="Sefer Saati 23:00">23:00</div>
+                                    <div class="sefersaat" title="Sefer Saati 23:00">@(((DateTime)item.Date).ToString("HH:mm"))</div>
                                     <span class="sefergun hidden-xs hidden-sm hidden-lg">Çarşamba</span>
                                     <span class="sefertarih  hidden-md hidden-xs   hidden-sm hidden-lg">11/05/2022</span>
-                                    <span class="sefertarih  hidden-xs   " data-toggle="tooltip" data-placement="top" title="" style="padding: 0px 3px 2px 0px; font-weight: 500; color: #e20613 !important; background: #d1d1d1;-webkit-border-radius: 3px;-moz-border-radius: 3px;border-radius: 3px;" data-original-title="Tahmini Yolculuk Süresi"><i class="fa fa-clock-o" aria-hidden="true" style="padding-right: 2px;"></i>6 Saat 45 Dakika</span>
+                                    <span class="sefertarih  hidden-xs   " data-toggle="tooltip" data-placement="top" title="" style="padding: 0px 3px 2px 0px; font-weight: 500; color: #e20613 !important; background: #d1d1d1;-webkit-border-radius: 3px;-moz-border-radius: 3px;border-radius: 3px;" data-original-title="Tahmini Yolculuk Süresi"><i class="fa fa-clock-o" aria-hidden="true" style="padding-right: 2px;"></i>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</span>
                                     <div class="sefertarih  hidden-sm hidden-md hidden-lg" title="Tahmini Yolculuk Süresi 06saat 45 dakika" style="padding: 0px 3px 2px 0px; font-weight: 500; color: #e20613 !important; background: #d1d1d1;-webkit-border-radius: 3px;-moz-border-radius: 3px;border-radius: 3px;"><i class="fa fa-clock-o" aria-hidden="true" style="padding-right: 2px;"></i>6s 45dk</div>
                                 </div>
                                 <div class="col-md-6 col-sm-6 col-xs-6 pd0 koltuk-secmobile" data-firma="" data-id="3590892" data-tarih="2022-05-11 23:00:00" data-fiyat="279">
