--- a/MkTurizm/UI/Views/Home/Index.cshtml
+++ b/MkTurizm/UI/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                                     <a href="#otobus" aria-controls="flights" role="tab" data-toggle="tab">Otobüs Bileti</a>
                                 </li>
                                 <li role="presentation">
-                                    <a href="#Bilet" aria-controls="hotels" role="tab" data-toggle="tab">Hotels</a>
+                                    <a href="#Bilet" aria-controls="hotels" role="tab" data-toggle="tab">Bilet Sorgulama</a>
                                 </li>
                             </ul>
 
