--- a/MkTurizm/UI/Views/Seferler/BiletBilgileri.cshtml
+++ b/MkTurizm/UI/Views/Seferler/BiletBilgileri.cshtml
@@ -1,4 +1,4 @@
-﻿@model EntityLayer.Reservation
+﻿@model EntityLayer.Concrete.Reservation
 @{
     ViewData["Title"] = "BiletBilgileri";
     Layout = "~/Views/Shared/Layout.cshtml";
