--- a/MkTurizm/UI/Views/Seferler/Index.cshtml
+++ b/MkTurizm/UI/Views/Seferler/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<EntityLayer.BusService>
+﻿@model List<EntityLayer.Concrete.BusService>
 @{
     ViewData["Title"] = "SeferBilgileri";
     Layout = "~/Views/Shared/Layout.cshtml";
