--- a/MkTurizm/UI/Views/Shared/Components/Seat/Default.cshtml
+++ b/MkTurizm/UI/Views/Shared/Components/Seat/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<EntityLayer.Reservation>
+﻿@model List<EntityLayer.Concrete.Reservation>
 <link href="~/MKTur/css/Koltuk.css" rel="stylesheet" />
 <div class="BusSeat">
     @{
