--- a/MkTurizm/UI/Views/Seferler/Index.cshtml
+++ b/MkTurizm/UI/Views/Seferler/Index.cshtml
@@ -16,11 +16,11 @@
                                     <h1 class="gidisheadh3 colorfff  ">
                                         <span class="hidden-xs hidden-sm gidishead">Gidiş </span>
                                         <span class="hidden-xs hidden-sm">
-                                            <a style="color:#fff;text-decoration:none !important;" href="https://www.pamukkale.com.tr/otobus-bileti/istanbul-esenler/">@item.Station.ToCity</a>
+                                            <a style="color:#fff;text-decoration:none !important;" href="https://www.pamukkale.com.tr/otobus-bileti/istanbul-esenler/">@item.ToCity.CityName</a>
                                         </span>
                                         &nbsp; - &nbsp;
                                         <span class="hidden-xs hidden-sm">
-                                            <a style="color:#fff;text-decoration:none !important;" href="#">@item.Station.FromCity</a>
+                                            <a style="color:#fff;text-decoration:none !important;" href="#">@item.FromCity.CityName</a>
                                         </span>
                                     </h1>
                                     <button type="submit" class="btn btn-pam mt0 inputseferdegis hidden-xs hidden-sm" style="min-width:95px;" id="gidisdegisiklik"><b>Sefer Değiştir</b></button>
@@ -55,7 +55,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-2 col-xs-3 col-sm-3 internetbilet mobilmt mobilmt2 koltuk-secmobile" data-firma="" data-id="3590892" data-tarih="2022-05-11 23:00:00" data-fiyat="279">
-                                        <p class="internetfiyat " style="line-height:0.5;font-size: 15px;margin: 0; color:#888; font-weight:normal;">&nbsp;</p><p class="internetfiyat " style="line-height:1.1;">@item.Station.Price<small style="font-size: 16px;"> TL</small></p>
+                                        <p class="internetfiyat " style="line-height:0.5;font-size: 15px;margin: 0; color:#888; font-weight:normal;">&nbsp;</p><p class="internetfiyat " style="line-height:1.1;">@item.Price<small style="font-size: 16px;"> TL</small></p>
                                     </div>
                                     <div class="col-md-2 col-xs-3 col-sm-3 sefersec sefersecdolu hidden-xs hidden-sm">
                                         <a href="/Seferler/BiletAl/@item.BusServiceId" class="btn btn-pam koltuk-sec"> SEFER SEÇ</a>
