--- a/MkTurizm/UI/Views/Seferler/BiletAl.cshtml
+++ b/MkTurizm/UI/Views/Seferler/BiletAl.cshtml
@@ -33,7 +33,7 @@
                 </style>
                 <div class="col-md-12">
                     @Html.Label("Koltuk Seçimi")
-                    @Html.DropDownListFor(x => x.Reservation.SeatNo, (List<SelectListItem>)ViewBag.sv, new { id="dropbox", @class = "cs-select cs-skin-border"  })
+                    @Html.DropDownListFor(x => x.Reservation.Seat.SeatNo, (List<SelectListItem>)ViewBag.sv, new { id="dropbox", @class = "cs-select cs-skin-border"  })
 
                 </div>
                 <div class="col-md-12">
@@ -45,10 +45,10 @@
         }
     <div class="col-md-4">
         <label style="margin-top:50px;display:block;">Durak Bilgileri</label>
-        <span>@ViewBag.BusService.Station.ToCity <i class="fas fa-angle-double-right"></i></span>
-        <span>@ViewBag.BusService.Station.Station1 <i class="fas fa-angle-double-right"></i></span>
-        <span>@ViewBag.BusService.Station.Station2 <i class="fas fa-angle-double-right"></i></span>
-        <span>@ViewBag.BusService.Station.FromCity</span>
+        @*<span>@ViewBag.ToCity<i class="fas fa-angle-double-right"></i></span>
+        <span>@ViewBag.Station1<i class="fas fa-angle-double-right"></i></span>
+        <span>@ViewBag.Station2<i class="fas fa-angle-double-right"></i></span>
+        <span>@ViewBag.FromCity</span>*@
 
         @await Component.InvokeAsync("Seat")
 
