--- a/MkTurizm/UI/Views/Bilet/Index.cshtml
+++ b/MkTurizm/UI/Views/Bilet/Index.cshtml
@@ -14,19 +14,21 @@
             <th>Tarih</th>
             <th>İşlem</th>
         </tr>
-        <tr>
-            <td>@Model.Passenger.PassengerName</td>
-            <td>@Model.BusService.ToCity.CityName</td>
-            <td>@Model.BusService.FromCity.CityName</td>
-            <td>@Model.Seat.SeatNo</td>
-            <td>@Model.BusService.Date</td>
-            <form Asp-controller="Bilet" Asp-Action="DeleteTicket" method="post">
-                @Html.HiddenFor(x=>x.BusServiceId)
-                @Html.HiddenFor(x=>x.PassengerId)
-                @Html.HiddenFor(x=>x.PnrNo)
-                @Html.HiddenFor(x=>x.SeatId)
-            <td><button type="submit" class="btn btn-danger">Bilet İPTAL</button></td>
-            </form>
-        </tr>
+       
+            <tr>
+                <td>@Model.Passenger.PassengerName</td>
+                <td>@Model.BusService.ToCity.CityName</td>
+                <td>@Model.BusService.FromCity.CityName</td>
+                <td>@Model.Seat.SeatNo</td>
+                <td>@Model.BusService.Date</td>
+                <td>
+                    <form action="/Bilet/DeleteTicket" method="post">
+                        <input type="hidden" name="pnrNo" value="@Model.PnrNo" />
+                        <button type="submit" class="btn btn-danger">Bilet İPTAL</button>
+                    </form>
+                </td>
+            </tr>
+        
+
     </table>
 </div>
