--- a/MkTurizm/UI/Views/Seferler/BiletAl.cshtml
+++ b/MkTurizm/UI/Views/Seferler/BiletAl.cshtml
@@ -11,14 +11,40 @@
         overflow-x: hidden;
     }
 </style>
+@if (!User.Identity.IsAuthenticated)
+{
+    <button type="button" id="btn" class="btn btn-primary hidden" data-toggle="modal" data-target="#exampleModal">
+        Launch demo modal
+    </button>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel"></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    İşleminize nasıl devam etmek istiyorsunuz?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Üye Olmadan Devam Et</button>
+                    <a href="/Account/Login" class="btn btn-primary">Üye Girişi Yap</a>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 <div class="container">
     <div class="row">
         @using (Html.BeginForm("BiletAl", "Seferler", FormMethod.Post))
         {
-            <div class="form-group col-md-6" style="margin:50px 0">
+            <div id="sex" class="form-group col-md-6" style="margin:50px 0">
                 <div class="col-md-12">
-                    @Html.Label("Ad Soyad")
+                    @Html.Label("Yolcu Adı Soyadı")
                     @Html.TextBoxFor(x => x.Passenger.PassengerName, new { @class = "form-control" })
                 </div>
                 <div class="col-md-12">
@@ -33,7 +59,7 @@
                 </style>
                 <div class="col-md-12">
                     @Html.Label("Koltuk Seçimi")
-                    @Html.DropDownListFor(x => x.Reservation.Seat.SeatNo, (List<SelectListItem>)ViewBag.sv, new { id="dropbox", @class = "cs-select cs-skin-border"  })
+                    @Html.DropDownListFor(x => x.Reservation.Seat.SeatNo, (List<SelectListItem>)ViewBag.sv, new { id = "dropbox", @class = "cs-select cs-skin-border" })
 
                 </div>
                 <div class="col-md-12">
@@ -43,19 +69,26 @@
                 </div>
             </div>
         }
-    <div class="col-md-4">
-        <label style="margin-top:50px;display:block;">Durak Bilgileri</label>
-        @*<span>@ViewBag.ToCity<i class="fas fa-angle-double-right"></i></span>
-        <span>@ViewBag.Station1<i class="fas fa-angle-double-right"></i></span>
-        <span>@ViewBag.Station2<i class="fas fa-angle-double-right"></i></span>
-        <span>@ViewBag.FromCity</span>*@
+        <div class="col-md-4">
+            <label style="margin-top:50px;display:block;">Durak Bilgileri</label>
+            @*<span>@ViewBag.ToCity<i class="fas fa-angle-double-right"></i></span>
+                <span>@ViewBag.Station1<i class="fas fa-angle-double-right"></i></span>
+                <span>@ViewBag.Station2<i class="fas fa-angle-double-right"></i></span>
+                <span>@ViewBag.FromCity</span>*@
 
-        @await Component.InvokeAsync("Seat")
+            @await Component.InvokeAsync("Seat")
 
-    </div>
+        </div>
     </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#btn").click()
 
+    });
+</script>
 
 
 
